<resources>
    <string name="app_name">POSAboda</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Inviald Email</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="confirm">Confirm</string>
    <string name="ok">Ok</string>
    <string name="failed">Faild</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="update_profile">Update Profile</string>
    <string name="details">Details</string>
    <string name="no_image">No Images</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="pasword_short">Password is too short</string>
    <string name="wait">Wait...</string>
    <string name="inc_user_pass">Incorrect username or password</string>
    <string name="user_blocked">User is blocked</string>
    <string name="user_not_have_perm">This user don\'t have permissions</string>
    <string name="something">Check internet connection</string>
    <string name="sale_orders">Sale orders</string>
    <string name="commission">Commission</string>
    <string name="alert">Alert</string>
    <string name="sales_orders_num">sales orders num</string>
    <string name="search">Search...</string>
    <string name="ch_dept">Choose department</string>
    <string name="ch_type">Choose type</string>
    <string name="ch_brand">Choose brand</string>
    <string name="egp">EGP</string>
    <string name="cart">Cart</string>
    <string name="total">Total :</string>
    <string name="choose_client">Choose client</string>
    <string name="empty_cart">Empty cart</string>
    <string name="stock_amount">Stock amount :</string>
    <string name="client_name">Client name</string>
    <string name="add">Add</string>
    <string name="order_added">Order sent successfully</string>
</resources>