<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>


        <variable
            name="lang"
            type="String" />
        <variable
            name="total"
            type="Double" />
        <import type="android.view.View"/>


    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_constraintTop_toTopOf="parent"

                >
                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@color/white"


                    >
                    <LinearLayout
                        android:id="@+id/llBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_left_arrow"
                            android:padding="3dp"
                            android:rotation='@{lang.equals("ar")?180:0}'
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:text="@string/cart"/>
                    </LinearLayout>
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray3"
                android:visibility='@{total==0.0?View.INVISIBLE:View.VISIBLE,default=invisible}'

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:visibility='@{total==0.0?View.INVISIBLE:View.VISIBLE,default=invisible}'

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray8"
                    android:textSize="15sp"
                    android:text="@string/total"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text='@{String.valueOf(total)}'
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray8"
                    android:textSize="15sp"
                    android:text="@string/egp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btnClient"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:background="@drawable/small_rounded_primary"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/choose_client"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility='@{total==0.0?View.VISIBLE:View.INVISIBLE,default=visible}'

            >
            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/ic_cart"
                app:tint="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@string/empty_cart"
                android:layout_marginTop="8dp"
                />
        </LinearLayout>
    </FrameLayout>


</layout>
