<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.app.posaboda.models.AddClientModel" />

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/imageClose"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/delete"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/choose_client"
                android:textStyle="bold"
                />
            <Space
                android:layout_width="24dp"
                android:layout_height="0dp"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"

            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/small_rounded_gray5"

                >
                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/small_rounded_gray5"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="16sp"
                >

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_user"
                    app:tint="@color/gray6" />

                <EditText
                    android:id="@+id/edtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:hint="@string/client_name"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray6"
                    android:textSize="15sp"
                    android:text="@={model.name}"
                    error="@{model.error_name}"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/small_rounded_gray5"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_call2"
                    app:tint="@color/gray6" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray6"
                    android:textSize="15sp"
                    android:text="@={model.phone}"
                    error="@{model.error_phone}"
                    />
            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/small_rounded_primary"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="16sp"

            />
    </LinearLayout>
</layout>