<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />

        <variable
            name="model"
            type="com.app.posaboda.models.LoginModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias=".15"
                />

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias=".15"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/small_rounded_gray5"
                    android:gravity="center_vertical"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"

                    >

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_user"
                        app:tint="@color/gray6" />

                    <EditText
                        android:id="@+id/edtUserName"
                        error="@{model.error_user_name}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/username"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:singleLine="true"
                        android:text="@={model.user_name}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray6"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/small_rounded_gray5"
                    android:gravity="center_vertical"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_lock"
                        app:tint="@color/gray6" />

                    <EditText
                        error="@{model.error_password}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:singleLine="true"
                        android:text="@={model.password}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray6"
                        android:textSize="15sp"
                        android:gravity="start|center_vertical"
                        android:textAlignment="viewStart"
                        />
                </LinearLayout>
            </LinearLayout>


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@drawable/small_rounded_primary"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias=".08"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>